增加 彩云小译 翻译引擎

--- a/src/main/resources/messages/TranslationBundle_zh.properties
+++ b/src/main/resources/messages/TranslationBundle_zh.properties
@@ -86,6 +86,7 @@ translation.engine.baidu.name=百度翻译
 translation.engine.ali.name=阿里翻译
 translation.engine.deepl.name=DeepL 翻译
 translation.engine.openai.name=OpenAI 翻译
+translation.engine.caiyun.name=彩云小译
 title.targetLanguage=目标语言
 tip.label.webInterpretation=网络释义:
 tip.label.sourceLanguage=源语言
